--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "test": "./node_modules/nodeunit/bin/nodeunit test/*.test.js"
   },
   "preferGlobal": true,
+  "dependencies": {
+    "tree-kill": "^1.2.2"
+  },
   "devDependencies": {
     "nodeunit": "~0.9.0"
   }
